--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: bloc_basis
 description: Flutter BLoC Basis.
 version: 1.0.0+1
-homepage:
+homepage: "https://ladans.io"
 
 environment:
   sdk: '>=3.1.0 <4.0.0'
